--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-	"name": "Miami Wind Obsidian Theme",
+	"name": "Miami Wind",
 	"version": "1.0.0",
 	"minAppVersion": "0.16.0",
-	"description": "a Color theme based on monkeytype's miami nights theme, catppuccin, and dracula themes using tailwind colors",
+	"description": "An Obsidian theme based on Miami Wind color scheme which is a blend of colors from Tailwind CSS and Greyscale colors from Catppuccin Mocha with inspiration from the theme Miami Nights for Monkeytype. Color Swatches built using Coolors",
 	"author": "hanakin",
 	"authorUrl": "https://github.com/hanakin",
 	"repo": "https://github.com/hanakin/miami-wind-obsidian-theme",
