--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,5 @@
 	"authorUrl": "https://github.com/hanakin",
 	"repo": "https://github.com/hanakin/miami-wind-obsidian-theme",
 	"modes": ["dark"],
-	"screenshot": "Preview.png"
+	"screenshot": "screenshot.png"
 }
